--- a/fraud-watchlist/package.json
+++ b/fraud-watchlist/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://patanjalipandey.github.io/Mail_AUtomation",
+  "homepage": "https://patanjalipandey.github.io/ReportSite",
   "name": "fraud-watchlist",
   "private": true,
   "version": "0.0.0",
